--- a/branching_xblock/static/css/branching_xblock.css
+++ b/branching_xblock/static/css/branching_xblock.css
@@ -7,3 +7,19 @@
 .branching_xblock_block p {
     cursor: pointer;
 }
+
+.choices {
+    display: flex;
+    justify-content: space-between;
+}
+
+.choices .choice-button {
+    background-color: #1d5280 !important;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    cursor: pointer;
+    background-image: none !important;
+}
