fix: minor fixes

--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -9,7 +9,7 @@
   </label>
   <label>
     <input type="checkbox" name="enable_hints" {{#if enable_hints}}checked{{/if}}/>
-    Enable hints in nodes
+    Show hints in nodes
   </label>
   <label>
     Max Score:
