--- a/branching_xblock/static/handlebars/node-block.handlebars
+++ b/branching_xblock/static/handlebars/node-block.handlebars
@@ -18,6 +18,7 @@
   <label>Hint:<br/>
     <textarea class="node-hint">{{node.hint}}</textarea>
   </label>
-  <div class="choices-container"></div>
-  <button type="button" class="btn-add-choice">Add Choice</button>
+  <div class="choices-container">
+    <button type="button" class="btn-add-choice">Add Choice</button>
+  </div>
 </div>
