--- a/branching_xblock/static/css/branching_xblock.css
+++ b/branching_xblock/static/css/branching_xblock.css
@@ -17,7 +17,11 @@
 }
 
 .branching-scenario .node-hint {
-    padding: 1.5em 1em;
+    border: 1px solid #d9d9d9;
+    border-radius: 0.75em;
+    font-style: italic;
+    background-color: #f1f0f0;
+    margin-top: 2em;
 }
 
 .choices {
@@ -27,7 +31,6 @@
 }
 
 .choices .choice-button {
-    background-color: #1d5280 !important;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -38,7 +41,13 @@
 }
 
 .undo-button {
-    margin: 1em 1em;
+    border: none;
+    border-radius: 4px;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    cursor: pointer;
+    background-image: none !important;
+    margin-left: 1em;
 }
 
 .score-display {
