--- a/branching_xblock/static/css/branching_xblock.css
+++ b/branching_xblock/static/css/branching_xblock.css
@@ -7,3 +7,50 @@
 .branching_xblock_block p {
     cursor: pointer;
 }
+
+.branching-scenario .node-content {
+    padding: 1em 1em;
+}
+
+.branching-scenario .node-media {
+    padding: 0em 1em;
+}
+
+.branching-scenario .node-hint {
+    border: 1px solid #d9d9d9;
+    border-radius: 0.75em;
+    font-style: italic;
+    background-color: #f1f0f0;
+    margin-top: 2em;
+}
+
+.choices {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 1em;
+}
+
+.choices .choice-button {
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    cursor: pointer;
+    background-image: none !important;
+}
+
+.undo-button {
+    border: none;
+    border-radius: 4px;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    cursor: pointer;
+    background-image: none !important;
+    margin-left: 1em;
+}
+
+.score-display {
+    padding: 1em 1em;
+    font-size: small;
+}
