--- a/branching_xblock/static/handlebars/node-block.handlebars
+++ b/branching_xblock/static/handlebars/node-block.handlebars
@@ -3,6 +3,7 @@
     <span class="node-title">Node {{inc idx}}</span>
     <button type="button" class="btn-delete-node">Delete</button>
   </div>
+  <p>If you delete this node, please update any choice target nodes that pointed to this node.</p>
   <label>Content:
     <textarea class="node-content">{{node.content}}</textarea>
   </label>
@@ -20,5 +21,6 @@
   </label>
   <div class="choices-container">
     <button type="button" class="btn-add-choice">Add Choice</button>
+    <p>Please note choices with blank node targets will be removed when saving.</p>
   </div>
 </div>
