fix: Styling Fixes
- auto resize choice buttons for large texts
- make hint collapsible
- make action buttons save and cancel sticky
- center media element

--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -9,7 +9,7 @@
   </label>
   <label>
     <input type="checkbox" name="enable_hints" {{#if enable_hints}}checked{{/if}}/>
-    Show hints in nodes
+    Allow learners to reveal hints
   </label>
   <label>
     Max Score:
