refactor: change choices to radio single choice

--- a/branching_xblock/static/css/studio_editor.css
+++ b/branching_xblock/static/css/studio_editor.css
@@ -254,3 +254,9 @@
     gap: 0.5em;
     font-weight: 600;
 }
+
+.overlay-text-help {
+    margin: 0.5em 0 0;
+    font-size: 0.85em;
+    color: #555;
+}
