--- a/branching_xblock/static/handlebars/node-block.handlebars
+++ b/branching_xblock/static/handlebars/node-block.handlebars
@@ -27,6 +27,7 @@
       <input type="checkbox" class="overlay-text-checkbox" {{#if node.overlay_text}}checked{{/if}}>
       Overlay text on image
     </label>
+    <p class="overlay-text-help">If left unchecked, text will appear outside the image.</p>
   </div>
   <label>Hint:<br/>
     <textarea class="node-hint">{{node.hint}}</textarea>
