--- a/branching_xblock/static/handlebars/node-block.handlebars
+++ b/branching_xblock/static/handlebars/node-block.handlebars
@@ -15,6 +15,7 @@
       <option value="audio" {{#if (eq node.media.type 'audio')}}selected{{/if}}>Audio</option>
     </select>
     <input type="text" class="media-url" placeholder="URL" value="{{node.media.url}}"/>
+    <p class="editor-note">Supports direct media files (.mp4/.webm/.mp3) or embeddable links from YouTube, Vimeo, Panopto.</p>
   </label>
   <label>Hint:<br/>
     <textarea class="node-hint">{{node.hint}}</textarea>
