fix: make display name editable

--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -1,5 +1,9 @@
 <div class="settings">
   <label>
+    Display Name:
+    <input type="text" name="display_name" value="{{display_name}}" />
+  </label>
+  <label>
     <input type="checkbox" name="enable_undo" {{#if enable_undo}}checked{{/if}}/>
     Allow undo
   </label>
