--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -1,5 +1,5 @@
 <div class="settings">
-  <label>
+  <label class="display-name-row">
     Display Name:
     <input type="text" name="display_name" value="{{display_name}}" />
   </label>
