--- a/branching_xblock/static/css/studio_editor.css
+++ b/branching_xblock/static/css/studio_editor.css
@@ -31,8 +31,20 @@
 }
 
 .settings label {
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: bold;
+}
+
+.settings .display-name-row {
+    display: flex;
+    align-items: center;
+    gap: 0.75em;
+    font-size: 1em;
+    font-weight: 600;
+}
+
+.settings .display-name-row input[name="display_name"] {
+    min-width: 220px;
 }
 
 .node-block {
@@ -83,6 +95,22 @@
 .node-block .media-url {
     display: block;
     margin-top: 0.5em;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.node-block .transcript-field {
+    margin-top: 0.5em;
+}
+
+.node-block .transcript-label {
+    display: flex;
+    flex-direction: column;
+    gap: 0.35em;
+    font-weight: 600;
+}
+
+.node-block .transcript-url {
     width: 100%;
     box-sizing: border-box;
 }
