[BB-10352] Additional fixes (#6)
Allow video embedding for Youtube, Panopto and Vimeo, editable display name and allow customizable html content for first node

--- a/branching_xblock/static/css/branching_xblock.css
+++ b/branching_xblock/static/css/branching_xblock.css
@@ -34,6 +34,36 @@
     height: auto;
 }
 
+.branching-scenario .node-media .bx-media-embed {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 */
+}
+
+.branching-scenario .node-media .bx-media-embed iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.branching-scenario .transcript-link {
+    padding: 0 1em 1em;
+    font-size: 0.95em;
+}
+
+.branching-scenario .transcript-link a {
+    color: #0a6ebd;
+    text-decoration: none;
+}
+
+.branching-scenario .transcript-link a:hover,
+.branching-scenario .transcript-link a:focus {
+    text-decoration: underline;
+}
+
 .branching-scenario .node-media audio {
     width: auto;
     max-width: 100%;
