--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -1,4 +1,8 @@
 <div class="settings">
+  <label class="display-name-row">
+    Display Name:
+    <input type="text" name="display_name" value="{{display_name}}" />
+  </label>
   <label>
     <input type="checkbox" name="enable_undo" {{#if enable_undo}}checked{{/if}}/>
     Allow undo
