refactor: replace hint settings with reset option

--- a/branching_xblock/static/css/branching_xblock.css
+++ b/branching_xblock/static/css/branching_xblock.css
@@ -285,6 +285,16 @@
     cursor: not-allowed;
 }
 
+.reset-button {
+    border: 1px solid #4a5568;
+    border-radius: 4px;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    cursor: pointer;
+    background: transparent;
+    color: #1f2a37;
+}
+
 .score-display {
     padding: 1em 1em;
     font-size: small;
@@ -297,6 +307,7 @@
     }
 
     .undo-button,
+    .reset-button,
     .choice-submit-button {
         width: 100%;
         text-align: center;
