--- a/branching_xblock/static/handlebars/settings-panel.handlebars
+++ b/branching_xblock/static/handlebars/settings-panel.handlebars
@@ -12,8 +12,8 @@
     Enable scoring
   </label>
   <label>
-    <input type="checkbox" name="enable_hints" {{#if enable_hints}}checked{{/if}}/>
-    Allow learners to reveal hints
+    <input type="checkbox" name="enable_reset_activity" {{#if enable_reset_activity}}checked{{/if}}/>
+    Enable reset activity
   </label>
   <label>
     Max Score:
